# rollercoaster

./: justfile  main.py  pyproject.toml
proto/: rollercoaster.proto  rollercoaster_pb2.py  rollercoaster_pb2.pyi  rollercoaster_pb2_grpc.py
services/: base.py  consumer_service.py  passenger_service.py  rollercoaster_service.py  wagon_service.py
